# zombie-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: assets.yaml  systems.default.yaml  window.default.yaml
src/: Config.cpp  Config.hpp  Game.cpp  Game.hpp  main.cpp
src/SDL2/: Window.cpp  Window.hpp
src/engine/: AssetManager.cpp  AssetManager.hpp  Engine.cpp  Engine.hpp
src/engine/IO/: Audio.hpp  Video.cpp  Video.hpp
src/engine/assets/: Asset.hpp  FontAsset.cpp  FontAsset.hpp  ImageAsset.cpp  ImageAsset.hpp  SoundAsset.cpp  SoundAsset.hpp  SpriteAsset.cpp  SpriteAsset.hpp
src/engine/drawables/: Drawable.cpp  Drawable.hpp  Image.hpp  Text.hpp
src/engine/elements/: Element.cpp  Element.hpp  Image.cpp  Image.hpp  Text.cpp  Text.hpp
src/engine/screens/: GameLoopScreen.cpp  GameLoopScreen.hpp  Screen.hpp
src/engine/screens/menu/: MenuScreen.cpp  MenuScreen.hpp
src/engine/systems/: Config.cpp  Config.hpp  Video.cpp  Video.hpp
src/engine/utils/: Config.cpp  Config.hpp  easylogging++.hpp
src/game/: main.cpp
src/game/screens/game/: GameLoop.cpp  GameLoop.hpp
src/game/screens/menu/: MainMenu.cpp  MainMenu.hpp
src/utils/: easylogging++.cpp
